sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:20: error: illegal start of simple expression
  }
  ^AlgBubbleSort1:21: error: 'while' expected but '}' found.
} 
^